--- a/style.css
+++ b/style.css
@@ -62,3 +62,21 @@ main {
     margin-right: 10%;
     align-self: center;
 }
+
+.info_table {
+    margin: auto;
+    padding: 10px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-size: 18px;
+    border-radius: 7000px;
+    color: #3b3b37;
+}
+
+th {
+    border-radius: 20px;
+    background-color: #e6e8f1;
+}
+
+td {
+    padding: 7px;
+}
