feat: add styles for block of information in lists in style.css

--- a/style.css
+++ b/style.css
@@ -80,3 +80,24 @@ main {
 .info_table td {
     padding: 7px;
 }
+
+li {
+    margin: 7px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-size: 18px;
+    color: #3b3b37;
+}
+
+.information_in_list h2 {
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-size: 21px;
+    font-weight: 700;
+    text-decoration-style: solid;
+    color: #3b3b37;
+}
+
+p {
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-size: 18px;
+    color: #3b3b37;
+}
