--- a/style.css
+++ b/style.css
@@ -106,3 +106,12 @@ code {
     font-size: 14px;
     color: #3b3b37;
 }
+
+hr {
+    margin-bottom: 30px;
+    margin-top: 30px;
+    height: 1px;
+    border: none;
+    color: #8D92A9;
+    background-color: #8D92A9;
+}
