--- a/style.css
+++ b/style.css
@@ -122,3 +122,19 @@ footer {
     font-size: 18px;
     color: #8D92A9;
 }
+
+.navigation_block {
+    margin-top: 7px;
+    margin-left: 35px;
+    margin-right: 35px;
+    text-align: center;
+    background-color: #eaeaea;
+    border-radius: 20px;
+}
+
+.navigation_block a {
+    margin: 15px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-size: 18px;
+    color: #8D92A9;
+}
