--- a/style.css
+++ b/style.css
@@ -90,6 +90,8 @@ p {
 }
 
 code {
+    display: block;
+    overflow-x: auto;
     font-size: 14px;
 }
 
@@ -125,4 +127,20 @@ footer {
 a {
     text-decoration: none;
     color: #8D92A9;
+}
+
+@media screen and (max-width: 750px) {
+    .wripper {
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+
+    .navigation_block a {
+        display: block;
+        width: 100%;
+    }
+
+    .additional_information .contacts p {
+        font-size: 17px;
+    }
 }
