--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     width: 18%;
     height: 18%;
     border-radius: 50%;
-    border: 6px #8D92A9 solid;
 }
 
 body {
@@ -62,6 +61,7 @@ main {
     padding: 10px;
     font-size: 18px;
     border-radius: 7000px;
+    border-spacing: 45px 0px;
 }
 
 .info_table th {
@@ -70,7 +70,9 @@ main {
 }
 
 .info_table td {
+    width: 390px;
     padding: 7px;
+    text-align: center;
 }
 
 li {
@@ -95,7 +97,7 @@ code {
     font-size: 14px;
 }
 
-hr {
+.information_in_list hr {
     margin-bottom: 30px;
     margin-top: 30px;
     height: 1px;
