--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ a {
     }
 
     .info_table table{
-        border-spacing: 5px 0px;
+        padding: 3px;
+        border-spacing: 2px 0px;
     }
 }
